# palelizacion-fourier

./: .env.example  .gitignore  README.md  main.py
1_Secuencial/: Makefile  fourier_seq.c  hoja1.csv  hoja2.csv
3_Procesos/: Makefile  fourier  fourier.c  hoja2.csv
4_Hilos/: Makefile  hilos_fourier.c  hoja1.csv  hoja2.csv
4_Hilos/Contexto/: Hilos1.c  Hilos2.c  Hilos3.c
5_MPI/: Makefile  fourier_mpi  fourier_mpi.c  hoja2.csv
5_MPI/Contexto/: Makefile  fourier_procesos.c  hilos_fourier.c  main.c
6_GPU/: fourier_gpu.cu
7_CUDA/: Makefile  fourier  fourier.cu  resultados_f(x).csv
Comparativa/: config.yaml  pyproject.toml
Comparativa/data/: 6BV1_Luna_Gonzales_Fase2.xlsx  Con_CUDA.csv  Con_procesos.csv
Comparativa/figuras/: metricas_error.csv  reporte.md
Comparativa/src/: comparativa_fourier.py
Comparativa/temp/: debug_cols.py  debug_csv.py  debug_csv2.py  explorar_excel.py
Demo/: main.py  pyproject.toml
Demo/core/: orchestrator.py  remote.py  types.py
Demo/display/: app.py
Demo/display/components/: bar_chart.py  code_panel.py  fourier_plot.py
Demo/display/states/: demo.py  select.py  standby.py  state.py
common/: fourier_core.h
test/: test_compilation.py  test_demo_seq.py  test_gpu.py  test_integration.py  test_output.py  test_screenshot.py  test_smoke.py
